--- a/ass2b/Dockerfile
+++ b/ass2b/Dockerfile
@@ -1,3 +1,5 @@
 FROM node:alpine
 COPY . /ass2b
 CMD node /ass2b/main.js
+docker build -t ass_contianer  ass2b
+docker run -p 3000:3000 your-image-name
